<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical"
	android:gravity="center_horizontal" android:background="@drawable/bg2"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ImageView android:id="@+id/mImageViewTitle_yijianyouhua"
		android:layout_width="fill_parent" android:layout_alignParentTop="true"
		android:layout_height="wrap_content" android:src="@drawable/imgtitle_yijianyouhua">
	</ImageView>
	<TextView android:id="@+id/mTextViewPrompt_yijianyouhua"
		android:paddingTop="10sp" android:textSize="20sp" android:textColor="@color/title_black"
		android:layout_below="@id/mImageViewTitle_yijianyouhua" android:text="@string/textPrompt_OneClickOptimization"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<TableLayout android:id="@+id/mTableLayout_yijianyouhua"
		android:layout_below="@id/mTextViewPrompt_yijianyouhua"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:paddingTop="20sp" android:orientation="vertical"
		android:layout_centerHorizontal="true" android:stretchColumns="0">
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji" android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<TextView android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/textcleanTempFile_OneClickOptimization"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:gravity="center_horizontal|center_vertical"
			android:background="@drawable/xuankuang_qinglilaji"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/textBackupContacts_OneClickOptimization"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji" android:gravity="center_horizontal|center_vertical"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/textBackupSMS_OneClickOptimization"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
	</TableLayout>

	<Button android:id="@+id/mButton_oneClickOptimization"
		android:paddingBottom="20sp" android:layout_alignParentBottom="true"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/textButton_OneClickOptimization"></Button>
</RelativeLayout>
