<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/widget33"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/bg2" xmlns:android="http://schemas.android.com/apk/res/android">
	<!--
		android:layout_below="@+id/mTableLayout_cleaningRubbish"
		android:layout_alignLeft="@+id/mTableLayout_cleaningRubbish"
	-->
	<ImageButton android:id="@+id/mImageButton_submit_cleaningRubbish"
		android:background="#00000000" android:paddingBottom="20sp"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true" android:src="@drawable/button_yijianqingchu">
	</ImageButton>
	<ImageView android:id="@+id/title_cleaningrubbish"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:src="@drawable/top_qinglilaji" android:layout_alignParentTop="true"></ImageView>
	<TableLayout android:id="@+id/mTableLayout_cleaningRubbish"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:paddingTop="20sp" android:orientation="vertical"
		android:layout_centerHorizontal="true" android:layout_below="@id/title_cleaningrubbish"
		android:stretchColumns="1">
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji"
			android:orientation="horizontal">
			<CheckBox android:checked="true" android:layout_height="wrap_content"
				android:id="@+id/mCheckBox_CleanTempFile_cleaningRubbish"
				android:layout_width="wrap_content"></CheckBox>
			<TextView android:id="@+id/mTexvView_CleanTempFile_cleaningRubbish"
				android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/cleanTempFile_cleaningRubbish"
				android:textAppearance="?android:attr/textAppearanceMedium"

				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<CheckBox android:id="@+id/mCheckBox_CleanSMSINBOX_cleaningRubbish"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
			</CheckBox>
			<TextView android:id="@+id/mTextView_CleanSMSINBOX_cleaningRubbish"
				android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/cleanSMSINBOX_cleaningRubbish"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<CheckBox android:id="@+id/mCheckBox_CleanSMSSENTBOX_cleaningRubbish"
				android:checked="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</CheckBox>
			<TextView android:id="@+id/mTextView_CleanSMSSENTBOX_cleaningRubbish"
				android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/cleanSMSSENTBOX_cleaningRubbish"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<CheckBox android:id="@+id/mCheckBox_CleanSMSDRAFT_cleaningRubbish"
				android:checked="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</CheckBox>
			<TextView android:id="@+id/mTextView_CleanSMSDRAFT_cleaningRubbish"
				android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/cleanSMSDRAFT_cleaningRubbish"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:background="@drawable/xuankuang_qinglilaji"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<CheckBox android:id="@+id/mCheckBox_CleanSMSOUTBOX_cleaningRubbish"
				android:checked="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</CheckBox>
			<TextView android:id="@+id/mTextView_CleanSMSOUTBOX_cleaningRubbish"
				android:gravity="center_horizontal|center_vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/cleanSMSOUTBOX_cleaningRubbish"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="20sp" android:textColor="@color/title_black">
			</TextView>
		</TableRow>
	</TableLayout>
</RelativeLayout>
